--- a/server/main/CMakeLists.txt
+++ b/server/main/CMakeLists.txt
@@ -1,1 +1,15 @@
 # the bubble service
+
+add_executable (bubbles_server src/bubbles_server.cpp ../../protocol/bubbles_protocol.hpp)
+
+target_link_libraries (bubbles_server
+	solid_frame_mpipc
+	solid_frame_aio
+	solid_frame
+	solid_serialization
+	solid_utility
+	solid_system
+	${SYS_BASIC_LIBS}
+	${SYS_DYNAMIC_LOAD_LIB}
+)
+
