--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -14,8 +14,8 @@ android {
             cmake {
                 arguments "-DANDROID_ARM_NEON=TRUE", "-DANDROID_TOOLCHAIN=gcc"//need gcc in order for arm64-v8a to work
                 cppFlags "-std=c++11 -frtti -fexceptions"
-                //abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
-                abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64", "armeabi"
+                abiFilters "x86", "x86_64"
+                //abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64", "armeabi"
             }
         }
     }
