adding compression support to server and qt client

--- a/server/main/CMakeLists.txt
+++ b/server/main/CMakeLists.txt
@@ -43,6 +43,7 @@ target_link_libraries (bubbles_server
 	solid_serialization
 	boost_program_options
 	boost_system
+	snappy
 	${SYS_BASIC_LIBS}
 	${SYS_DYNAMIC_LOAD_LIB}
 )
