--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "client/android/app/src/main/cpp/solidframe"]
 	path = client/android/app/src/main/cpp/solidframe
 	url = https://github.com/vipalade/solidframe.git
+	branch = master
 [submodule "client/android/app/src/main/cpp/boringssl"]
 	path = client/android/app/src/main/cpp/boringssl
 	url = https://boringssl.googlesource.com/boringssl
+	branch = master
