--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "client/android/app/src/main/cpp/solidframe"]
 	path = client/android/app/src/main/cpp/solidframe
 	url = https://github.com/vipalade/solidframe.git
-	branch = master
+	branch = work
 [submodule "client/android/app/src/main/cpp/boringssl"]
 	path = client/android/app/src/main/cpp/boringssl
 	url = https://boringssl.googlesource.com/boringssl
