--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -2,19 +2,20 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "25.0.0"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.example.vapa.bubbles"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                arguments "-DANDROID_ARM_NEON=TRUE", "-DANDROID_TOOLCHAIN=gcc"//need gcc in order for arm64-v8a to work
+                arguments "-DANDROID_ARM_NEON=TRUE", "-DANDROID_STL=c++_static"//, "-DANDROID_TOOLCHAIN=gcc"//need gcc in order for arm64-v8a to work
                 cppFlags "-std=c++11 -frtti -fexceptions"
-                abiFilters "x86", "x86_64"
+                abiFilters "x86"//, "x86_64"
+                targets "native-lib", "bubbles_client_engine"
                 //abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64", "armeabi"
             }
         }
@@ -33,10 +34,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:24.2.1'
+    testImplementation 'junit:junit:4.12'
 }
