--- a/client/qt/CMakeLists.txt
+++ b/client/qt/CMakeLists.txt
@@ -56,7 +56,7 @@ if(${Qt5Widgets_FOUND})
         ${src_basic_gui}
     )
 
-    add_dependencies(bubbles_client bubbles_client_certs)
+    add_dependencies(bubbles_client bubbles_client_certs build_snappy)
 
     target_link_libraries(
         bubbles_client
@@ -67,6 +67,7 @@ if(${Qt5Widgets_FOUND})
         boost_program_options
         boost_system
         Qt5::Widgets
+        ${SNAPPY_LIB}
         ${SYS_BASIC_LIBS}
     )
 endif()
