--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -12,11 +12,12 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                arguments "-DANDROID_ARM_NEON=TRUE", "-DANDROID_STL=c++_shared"//, "-DANDROID_TOOLCHAIN=gcc"//need gcc in order for arm64-v8a to work
+                arguments "-DANDROID_STL=c++_shared"//"-DANDROID_NATIVE_API_LEVEL=21" is needed to build boringssl on arm64-v8a
+                                                    //but it still does not work: https://boringssl.googlesource.com/boringssl/+/HEAD/BUILDING.md#assembling-armv8-with-clang
                 cppFlags "-std=c++11 -frtti -fexceptions"
-                abiFilters "x86"//, "x86_64"
-                //targets "native-lib", "bubbles_client_engine"
                 //abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64", "armeabi"
+                abiFilters "armeabi-v7a", "x86"
+                targets "native-lib"
             }
         }
     }
@@ -33,15 +34,6 @@ android {
         }
     }
 }
-
-//dependencies {
-//    implementation fileTree(include: ['*.jar'], dir: 'libs')
-//    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-//        exclude group: 'com.android.support', module: 'support-annotations'
-//    })
-//    implementation 'com.android.support:appcompat-v7:24.2.1'
-//    testImplementation 'junit:junit:4.12'
-//}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
