--- a/client/ios/bubbles/Podfile
+++ b/client/ios/bubbles/Podfile
@@ -7,9 +7,9 @@ target 'bubbles' do
 
   # Pods for bubbles
   pod 'BoringSSL', '~> 9.1'
-  pod 'SolidFrame/frame_mpipc', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'podspec'
-  pod 'SolidFrame/serialization', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'podspec'
-  pod 'SolidFrame/frame_aio_openssl', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'podspec'
+  pod 'SolidFrame/frame_mpipc', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'work'
+  pod 'SolidFrame/serialization', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'work'
+  pod 'SolidFrame/frame_aio_openssl', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'work'
   pod 'BubblesEngine', :configuration => 'Debug', :path => '../../../'
   pod 'snappy', :configuration => 'Debug', :podspec => 'https://raw.githubusercontent.com/vipalade/bubbles/ios/snappy.podspec'
 end
