work: use chromium-stable branch for boringssl

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,4 +5,4 @@
 [submodule "client/android/bubbles/app/src/main/cpp/boringssl"]
 	path = client/android/bubbles/app/src/main/cpp/boringssl
 	url = https://boringssl.googlesource.com/boringssl
-	branch = master
+	branch = chromium-stable
