--- a/client/ios/bubbles/Podfile
+++ b/client/ios/bubbles/Podfile
@@ -7,9 +7,9 @@ target 'bubbles' do
 
   # Pods for bubbles
   pod 'BoringSSL', '~> 10.0'
-  pod 'SolidFrame/frame_mpipc', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'work'
-  pod 'SolidFrame/serialization_v2', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'work'
-  pod 'SolidFrame/frame_aio_openssl', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'work'
+  pod 'SolidFrame/frame_mpipc', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'master'
+  pod 'SolidFrame/serialization_v2', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'master'
+  pod 'SolidFrame/frame_aio_openssl', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'master'
   pod 'BubblesEngine', :configuration => 'Debug', :path => '../../../'
   pod 'snappy', :configuration => 'Debug', :podspec => 'https://raw.githubusercontent.com/vipalade/bubbles/work/snappy.podspec'
 end
