work: solid_frame_mpipc->solid_frame_mprpc

--- a/client/engine/CMakeLists.txt
+++ b/client/engine/CMakeLists.txt
@@ -4,7 +4,7 @@ add_library (bubbles_client_engine
     src/bubbles_client_engine.cpp
 )
 
-target_link_libraries(bubbles_client_engine solid_frame_mpipc)
+target_link_libraries(bubbles_client_engine solid_frame_mprpc)
 
 
 
