--- a/client/ios/bubbles/Podfile
+++ b/client/ios/bubbles/Podfile
@@ -7,7 +7,7 @@ target 'bubbles' do
 
   # Pods for bubbles
   pod 'BoringSSL', '~> 10.0'
-  pod 'SolidFrame/frame_mpipc', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'work'
+  pod 'SolidFrame/frame_mprpc', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'work'
   pod 'SolidFrame/serialization_v2', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'work'
   pod 'SolidFrame/frame_aio_openssl', :configuration => 'Debug', :git => 'https://github.com/vipalade/solidframe.git', :branch => 'work'
   pod 'BubblesEngine', :configuration => 'Debug', :path => '../../../'
